TEZ-1509. Set a useful default value for java opts (bikas)